--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 моделей данных для всего проекта.
             </p>
             <small>Код проекта может быть предоставлен по запросу для ознакомления.</small>
-            <small>Конакты менеджера проекта и тим-лида команды iOS разработки могут быть предоставлены по запросу.</small>
+            <small>Контакты менеджера проекта и тим-лида команды iOS разработки могут быть предоставлены по запросу.</small>
 
             <h3>Мои проекты</h3>
             <h4>Прогноз погоды</h4>
@@ -86,9 +86,7 @@
                 Это дипломный проект курса Нетологии.
                 Приложение представлет собой клиент социальной сети. Полностью построен на архитектуре MVVM+C. Большое количество модулей сделало обоснованным
                 внедрение координаторов для отимизации навигации и сохранении логики в коде. 
-                Интерфейс приложения реализован на UIKit, с созданием кастомных элементов, включая кнопки, текстовые поля и др. Бэкенд на сервисах Firebase:
-                для аутентификации и авторизации пользователей используется Auth, Firestore как основная база данных и CloudStorage для хранения пользовательских
-                файлов. Для локального хранения данных использовался фреймворк CoreData. 
+                Интерфейс приложения реализован на UIKit, с созданием кастомных элементов, включая кнопки, текстовые поля и др. Бэкенд на сервисах Firebase. Для локального хранения данных использовался фреймворк CoreData. 
             </p>
             <p>
                 В различных ветках в репозитории этого проекта можно посмотреть последовательный прогресс в обучении. 
